[gd_scene load_steps=3 format=3 uid="uid://bde23rjcy8qr8"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_nhqvg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_malrr"]
radius = 84.1487

[node name="Enemy" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
script = ExtResource("1_nhqvg")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_malrr")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
